--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                   <h4>Our Approach</h4>
                   <p>
                     We host tech awareness events, raise awareness and provide
-                    education on the transformative power of technology, with a
-                    focus on reaching underserved populations.
+                    education on the transformation power of technology, with a
+                    focus on reaching undeserved populations.
                   </p>
                 </li>
               </ul>
