Adjust teams section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sites For All</title>
+    <title>BizInnovate</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/footer.css">
     <script src="scripts/index.js"></script>
@@ -39,7 +39,7 @@
       <a href="#services">Services</a>
       <a href="#our-mission">Our Mission</a>
       <a href="#our-team">Team</a>
-      <a href="#contact-us">Contact Us</a>
+      <a href="#contact">Contact Us</a>
   </div>
   <button id="myBtn"> 
       <a href="#top" style="color: white">🠉</a> 
@@ -102,7 +102,7 @@
         <h2 data-aos="fade" data-aos-duration="1000">Values</h2>
         <p data-aos="fade" data-aos-duration="1500">
           Passionate dedication to social impact, equality,
-          and inclusivity.
+          and inclusively.
         </p>
       </div>
       <div class="aboutus-items-container">
@@ -134,30 +134,64 @@
   </section>
   <!--Team-->
   <section class="frontpage b5" id="our-team">
+    <h1>Meet the Team</h1>
     <div class="column-container">
-      <div class="aboutus-items-container">
-        <h2 data-aos="fade" data-aos-duration="1000">Our Team</h2>
-        <p data-aos="fade" data-aos-duration="1500">
-          Meet the dedicated individuals driving our mission forward.
+      <div class="team-member">
+        <img src="/images/cat-1.jpg" alt="Team Member 1">
+        <h3>Amanda Gxagxa</h3>
+        <p>CEO</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+          id ipsum magnam saepe impedit porro itaque minima? 
+          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
         </p>
       </div>
-      <div class="aboutus-items-container">
-        <h3>Leadership</h3>
-        <p data-aos="fade" data-aos-duration="1500">
-          Our leadership team brings decades of experience in technology
-          education and community empowerment.
+  
+      <div class="team-member">
+        <img src="/images/cat-2.jpg" alt="Team Member 2">
+        <h3>Lungisa</h3>
+        <p>CTO</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+          id ipsum magnam saepe impedit porro itaque minima? 
+          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
         </p>
       </div>
-      <div class="aboutus-items-container">
-        <h3>Meet Our Experts</h3>
-        <p data-aos="fade" data-aos-duration="1500">
-          A diverse team of specialists committed to creating a positive impact
-          through technology education and innovation.
+  
+      <div class="team-member">
+        <img src="/images/cat-1.jpg" alt="Team Member 3">
+        <h3>Anathi</h3>
+        <p>Chief of Staff</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+          id ipsum magnam saepe impedit porro itaque minima? 
+          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+        </p>
+      </div>
+  
+      <div class="team-member">
+        <img src="/images/cat-2.jpg" alt="Team Member 4">
+        <h3>Yonela Futho</h3>
+        <p>CFO</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+          id ipsum magnam saepe impedit porro itaque minima? 
+          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+        </p>
+      </div>
+  
+      <div class="team-member">
+        <img src="/images/cat-1.jpg" alt="Team Member 5">
+        <h3>Lilo M</h3>
+        <p>CTO</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+          id ipsum magnam saepe impedit porro itaque minima? 
+          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
         </p>
       </div>
     </div>
   </section>
-  
   
     <!-- CONTACT -->
     <section id="contact" class="contact">
