adding some css

--- a/index.html
+++ b/index.html
@@ -53,40 +53,62 @@
   </div>
   <section class="frontpage b2" id="about-us">
       <div class="aboutus-items-container">
-          <h2 data-aos="fade" data-aos-duration="1000">About Us</h2>
-          <p data-aos="fade" data-aos-duration="1500">
+          <h2 >About Us</h2>
+          <p>
             BiziNovate is dedicated to empowering females, youth, and small businesses from disadvantaged communities through AI, technology education, IT solutions, and business support.<br><br>
             Our key goals include:<br>
             Bridging the digital divide by providing technology and AI education,
             Offering IT solutions and career opportunities,
             Fostering community involvement and support for educational initiatives,
             Emphasizing our commitment to social impact, especially in undeserved populations, particularly women and youth.
-          </p data-aos="fade" data-aos-duration="1500">
+          </p>
       </div>
   </section>
   <section class="frontpage b3" id="services">
       <div class="aboutus-items-container">
           <h2 data-aos="fade" data-aos-duration="1000">Services</h2>
-          <h4>Our Approach
+          <h4>Tech Expo events
           </h4>
           <p data-aos="fade" data-aos-duration="1500">
-            We host tech awareness events, raise
-            awareness and provide education on
-            the transformation power of
-            technology, with a focus on reaching
-            undeserved populations.
+            Interactive workshops tailored
+for business owners and female
+youth, showcasing the benefits
+and applications of technology in
+various aspects of life. Inviting
+the Experts to motivate.
           </p data-aos="fade" data-aos-duration="1500">
       </div>
       <div class="aboutus-items-container">
-        <h4>Key Focus
+        <h4>Entrepreneurship
         </h4>
         <p data-aos="fade" data-aos-duration="1500">
-          Bridging the digital divide and
-        empowering women and youth from
-        disadvantaged communities.
+          Training programs designed
+to equip aspiring
+entrepreneurs, especially
+women, with the skills and
+knowledge needed to
+leverage technology for
+business success.
 
         </p data-aos="fade" data-aos-duration="1500">
     </div>
+    <div class="aboutus-items-container">
+      <h4>Mentorship
+        and Support
+        
+      </h4>
+      <p data-aos="fade" data-aos-duration="1500">
+        Providing mentorship and
+support networks to guide
+participants in embracing
+technology and achieving their
+goals, including access to
+industry experts, networking
+events, and online
+communities.
+
+      </p data-aos="fade" data-aos-duration="1500">
+  </div>
   </section>
   <section class="frontpage b4" id="our-mission">
     <div class="column-container">
@@ -133,66 +155,66 @@
     </div>
   </section>
   <!--Team-->
-  <section class="frontpage b5" id="our-team">
-    <h1>Meet the Team</h1>
-    <div class="column-container">
-      <div class="team-member">
-        <img src="/images/cat-1.jpg" alt="Team Member 1">
-        <h3>Amanda Gxagxa</h3>
-        <p>CEO</p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
-          id ipsum magnam saepe impedit porro itaque minima? 
-          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
-        </p>
-      </div>
-  
-      <div class="team-member">
-        <img src="/images/cat-2.jpg" alt="Team Member 2">
-        <h3>Lungisa</h3>
-        <p>CTO</p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
-          id ipsum magnam saepe impedit porro itaque minima? 
-          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
-        </p>
-      </div>
-  
-      <div class="team-member">
-        <img src="/images/cat-1.jpg" alt="Team Member 3">
-        <h3>Anathi</h3>
-        <p>Chief of Staff</p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
-          id ipsum magnam saepe impedit porro itaque minima? 
-          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
-        </p>
-      </div>
-  
-      <div class="team-member">
-        <img src="/images/cat-2.jpg" alt="Team Member 4">
-        <h3>Yonela Futho</h3>
-        <p>CFO</p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
-          id ipsum magnam saepe impedit porro itaque minima? 
-          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
-        </p>
-      </div>
-  
-      <div class="team-member">
-        <img src="/images/cat-1.jpg" alt="Team Member 5">
-        <h3>Lilo M</h3>
-        <p>CTO</p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
-          id ipsum magnam saepe impedit porro itaque minima? 
-          Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
-        </p>
-      </div>
+ <section class="frontpage b5" id="our-team">
+  <h1>Meet the Team</h1>
+  <div class="column-container">
+    <div class="team-member">
+      <img src="/images/cat-1.jpg" alt="Team Member 1">
+      <h3>Amanda Gxagxa</h3>
+      <p>CEO</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+        id ipsum magnam saepe impedit porro itaque minima? 
+        Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+      </p>
     </div>
-  </section>
-  
+
+    <div class="team-member">
+      <img src="/images/cat-2.jpg" alt="Team Member 2">
+      <h3>Lungisa</h3>
+      <p>CTO</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+        id ipsum magnam saepe impedit porro itaque minima? 
+        Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+      </p>
+    </div>
+
+    <div class="team-member">
+      <img src="/images/cat-1.jpg" alt="Team Member 3">
+      <h3>Anathi</h3>
+      <p>Chief of Staff</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+        id ipsum magnam saepe impedit porro itaque minima? 
+        Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+      </p>
+    </div>
+
+    <div class="team-member">
+      <img src="/images/cat-2.jpg" alt="Team Member 4">
+      <h3>Yonela Futho</h3>
+      <p>CFO</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+        id ipsum magnam saepe impedit porro itaque minima? 
+        Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+      </p>
+    </div>
+
+    <div class="team-member">
+      <img src="/images/cat-1.jpg" alt="Team Member 5">
+      <h3>Lilo M</h3>
+      <p>CTO</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt quaerat dolores, 
+        id ipsum magnam saepe impedit porro itaque minima? 
+        Ea voluptatibus, nihil est provident dolores molestiae error quaerat. Soluta, sunt.
+      </p>
+    </div>
+  </div>
+</section>
+
     <!-- CONTACT -->
     <section id="contact" class="contact">
       <div class="container pt-5 pb-5">
